# solocoder-5392-rust-axum-healthcheck

./: .gitignore  Cargo.toml  NEXT_PROMPT_R1.txt  NEXT_PROMPT_R2.txt  PROMPT.txt  config.toml  empty_config.toml  test_config_r2.toml  test_http_server.py  webhook_log.txt  webhook_server.py
src/: lib.rs  main.rs
src/alert/: mod.rs
src/checker/: mod.rs
src/config/: mod.rs
src/dependency/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/state/: mod.rs
tests/: integration_test.rs
