[package]
name = "healthcheck-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
notify = "6.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
ringbuf = "0.3"
async-trait = "0.1"
http = "1.0"
http-api-problem = "0.5"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.0"
tower = { version = "0.5", features = ["util"] }
axum-test = "15"

[[bin]]
name = "healthcheck-service"
path = "src/main.rs"

[lib]
name = "healthcheck_service"
path = "src/lib.rs"
